JS: Criei um método do obj. balancete que comporta como radio as checkboxes do tipo de requisição (Normal, especial ou 2a via e Original, Duplicado ou Triplicado) e outro que memoriza o tipo escolhido na Localstorage. Também criei funções que clonam e adicionam o 2o header e o footer da ficha à todas páginas na impressão.

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                     <div class="ficha__header__col-cmam --display-flex-xy-center">
                         <span><b>CMAM&nbsp;-&nbsp;Modelo&nbsp;01</b></span>
                     </div>
-                    <div class="ficha__header__col-com-emblema">
+                    <div class="ficha__header__col-com-emblema ficha__header__col--display-grid">
                         <div class="ficha__linha-de-emblema --border-b">
                             <figure>
                                 <img src="imagens/emblema.png" alt="emblema da República de Moçambique" class="ficha__emblema" />
@@ -106,7 +106,7 @@
                             </datalist>
                         </div>
                     </div>
-                    <div class="ficha__header__col-com-titulo-req-balancete --border-l">
+                    <div class="ficha__header__col-com-titulo-req-balancete ficha__header__col--display-grid --border-l">
                         <div class="col-com-titulo-requisicao__linha-do-titulo --display-flex-xy-center --border-b">
                             <h1 class="ficha__titulo-requisicao">
                                 <label for=input-num-de-req>Requisição/Balancete N°</label>
@@ -788,7 +788,7 @@
                         </div>  
       
                         <!-- Pagina 2 -->
-                        <div class="ficha__linha-de-inputs --page-break">
+                        <div class="ficha__linha-de-inputs ficha__linha-de-inputs--1a-da-pagina">
                             <input type="text" placeholder="FNM" value="2-I-2" />
                             <input type="text" placeholder="Adicionar medicamento/artigo médico" value="Anti-hemorroidário 30 g Sup."/>
                             <!-- Stock no Início do Período -->
@@ -1438,7 +1438,7 @@
                         </div>
 
                         <!-- Pagina 3 -->
-                        <div class="ficha__linha-de-inputs --page-break">
+                        <div class="ficha__linha-de-inputs ficha__linha-de-inputs--1a-da-pagina">
                             <input type="text" placeholder="FNM" value="5-A-2" />
                             <input type="text" placeholder="Adicionar medicamento/artigo médico" value="Aminofilina 240 mg/10 ml Inj."/>
                             <!-- Stock no Início do Período -->
@@ -2088,7 +2088,7 @@
                         </div>
 
                          <!-- Pagina 4 -->
-                        <div class="ficha__linha-de-inputs --page-break">
+                        <div class="ficha__linha-de-inputs ficha__linha-de-inputs--1a-da-pagina">
                             <input type="text" placeholder="FNM" value="7-B-9" />
                             <input type="text" placeholder="Adicionar medicamento/artigo médico" value="Tramadol 50 mg Cáps."/>
                             <!-- Stock no Início do Período -->
@@ -2738,7 +2738,7 @@
                         </div>
 
                         <!-- Pagina 5 -->
-                        <div class="ficha__linha-de-inputs --page-break">
+                        <div class="ficha__linha-de-inputs ficha__linha-de-inputs--1a-da-pagina">
                             <input type="text" placeholder="FNM" value="7-J-6" />
                             <input type="text" placeholder="Adicionar medicamento/artigo médico" value="Haloperidol 5 mg/1 ml Inj."/>
                             <!-- Stock no Início do Período -->
@@ -3388,7 +3388,7 @@
                         </div>
 
                         <!-- Pagina 6 -->
-                        <div class="ficha__linha-de-inputs --page-break">
+                        <div class="ficha__linha-de-inputs ficha__linha-de-inputs--1a-da-pagina">
                             <input type="text" placeholder="FNM" value="8-F-8" />
                             <input type="text" placeholder="Adicionar medicamento/artigo médico" value="Eritromicina 250 mg/5 ml Susp."/>
                             <!-- Stock no Início do Período -->
@@ -4038,7 +4038,7 @@
                         </div>
 
                         <!-- Pagina 7 -->
-                        <div class="ficha__linha-de-inputs --page-break">
+                        <div class="ficha__linha-de-inputs ficha__linha-de-inputs--1a-da-pagina">
                             <input type="text" placeholder="FNM" value="8-O-5" />
                             <input type="text" placeholder="Adicionar medicamento/artigo médico" value="Arteméter e Lumefantrina 140 mg Comp. (6 &times; 4)"/>
                             <!-- Stock no Início do Período -->
@@ -4688,7 +4688,7 @@
                         </div>
 
                         <!-- Pagina 8 -->
-                        <div class="ficha__linha-de-inputs --page-break">
+                        <div class="ficha__linha-de-inputs ficha__linha-de-inputs--1a-da-pagina">
                             <input type="text" placeholder="FNM" value="12-B-6" />
                             <input type="text" placeholder="Adicionar medicamento/artigo médico" value="Dextrose a 50% Inj."/>
                             <!-- Stock no Início do Período -->
@@ -5338,7 +5338,7 @@
                         </div>
 
                         <!-- Pagina 9 -->
-                        <div class="ficha__linha-de-inputs --page-break">
+                        <div class="ficha__linha-de-inputs ficha__linha-de-inputs--1a-da-pagina">
                             <input type="text" placeholder="FNM" value="15-B-11" />
                             <input type="text" placeholder="Adicionar medicamento/artigo médico" value="Hidrocortisona 30 g Creme cutâneo a 1%"/>
                             <!-- Stock no Início do Período -->
@@ -5988,7 +5988,7 @@
                         </div>
 
                         <!-- Pagina 10 -->
-                        <div class="ficha__linha-de-inputs --page-break">
+                        <div class="ficha__linha-de-inputs ficha__linha-de-inputs--1a-da-pagina">
                             <input type="text" placeholder="FNM" value="20-A-1" />
                             <input type="text" placeholder="Adicionar medicamento/artigo médico" value="Água Oxigenada a 10 volumes Sol. a 3% - Fr. 500 ml"/>
                             <!-- Stock no Início do Período -->
@@ -6638,7 +6638,7 @@
                         </div>  
                         
                         <!-- Página 11 -->
-                        <div class="ficha__linha-de-inputs --page-break">
+                        <div class="ficha__linha-de-inputs ficha__linha-de-inputs--1a-da-pagina">
                             <input type="text" placeholder="FNM" value="&minus;" />
                             <input type="text" placeholder="Adicionar medicamento/artigo médico" value="Luvas de Procedimento Tamanho S"/>
                             <!-- Stock no Início do Período -->
@@ -7304,7 +7304,7 @@
                 <aside class="ficha__aside-modificadores-de-cor-da-ficha">
                     <div>
                         <label for="checkbox-original">Original</label>
-                        <input type="checkbox" checked id="checkbox-original" class="checkbox-modificador-de-cor-da-ficha" data-copiadaficha=""/>
+                        <input type="checkbox" checked id="checkbox-original" class="checkbox-modificador-de-cor-da-ficha" data-copiadaficha="original"/>
                     </div>
                     <div>
                         <label for="checkbox-duplicado">Duplicado</label>
