HTML: Actualizei a designação das Luvas de Procedimentos Tamanho S, M e L para Luvas de Procedimento Tamanho S (Pequeno), M (Médio), L (Grande) respectivamente.

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                                 <span class="header__menu__item--hide-on-mobile --cursor-pointer">Imprimir</span>
                                 <span class="header__menu__item--hide-on-desktop --cursor-pointer">Salvar&nbsp;como&nbsp;PDF</span>
                             </button>
-                        <li class="header__menu__li header__menu__item--hide-on-mobile">
+                        <li class="header__menu__li header__menu__item--hide-on-mobile --hide-on-mobile">
                             <button class="header__menu__btn header__menu__btn--sobre">Sobre</button>
                         <li class="header__menu__li">
                             <button class="header__menu__btn header__menu__btn--ajuda">
@@ -6641,7 +6641,7 @@
                         <!-- Página 11 -->
                         <div class="ficha__linha-de-inputs ficha__linha-de-inputs--1a-da-pagina">
                             <input type="text" placeholder="FNM" value="&minus;" />
-                            <input type="text" placeholder="Adicionar medicamento/artigo médico" value="Luvas de Procedimento Tamanho S"/>
+                            <input type="text" placeholder="Adicionar medicamento/artigo médico" value="Luvas de Procedimento Tamanho S (Pequeno)"/>
                             <!-- Stock no Início do Período -->
                             <input type="number" min="0" data-stfp="l265-c1c2-menos-l265-c3" data-stfpoutput="l265-c4" data-diferenca="l265-c6-menos-l265-c4" data-diferencaoutput="l265-c7" />
                             <!-- Soma das Entradas -->
@@ -6665,7 +6665,7 @@
                         </div>   
                         <div class="ficha__linha-de-inputs">
                             <input type="text" placeholder="FNM" value="&minus;" />
-                            <input type="text" placeholder="Adicionar medicamento/artigo médico" value="Luvas de Procedimento Tamanho M"/>
+                            <input type="text" placeholder="Adicionar medicamento/artigo médico" value="Luvas de Procedimento Tamanho M (Médio)"/>
                             <!-- Stock no Início do Período -->
                             <input type="number" min="0" data-stfp="l266-c1c2-menos-l266-c3" data-stfpoutput="l266-c4" data-diferenca="l266-c6-menos-l266-c4" data-diferencaoutput="l266-c7" />
                             <!-- Soma das Entradas -->
@@ -6689,7 +6689,7 @@
                         </div>   
                         <div class="ficha__linha-de-inputs">
                             <input type="text" placeholder="FNM" value="&minus;" />
-                            <input type="text" placeholder="Adicionar medicamento/artigo médico" value="Luvas de Procedimento Tamanho L"/>
+                            <input type="text" placeholder="Adicionar medicamento/artigo médico" value="Luvas de Procedimento Tamanho L (Grande)"/>
                             <!-- Stock no Início do Período -->
                             <input type="number" min="0" data-stfp="l267-c1c2-menos-l267-c3" data-stfpoutput="l267-c4" data-diferenca="l267-c6-menos-l267-c4" data-diferencaoutput="l267-c7" />
                             <!-- Soma das Entradas -->
