HTML/CSS: Confinei os inputs do header dentro dos parents para não extravasarem.

--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
                         </div>
 
                         <div class="ficha__col-tipo-de-requisicao__subcol ficha__col-tipo-de-requisicao__subcol--min-height">
-                            <label for="input-data-de-requisicao">
+                            <label for="input-data-de-requisicao" class="col-tipo-de-requisicao__label-data-de-requisicao">
                                 Data de Requisição:
                             </label>
                             <input type="date" id="input-data-de-requisicao" class="input-nao-celular --fw-700 col-tipo-de-requisicao__input-data-de-requisicao" />
