HTML/JS: Actualizei a mensagem de retorno ao acionar o comando 'Esvaziar ficha' com a ficha vazia e o link de acesso ao totalizador de resumo mensal de notificação de tb e tb/hiv.

--- a/index.html
+++ b/index.html
@@ -7529,7 +7529,7 @@
                     </figure>
                 </details>
                 <details class="artigo__details artigo__details--border-b artigo__details--motivo-de-celulas-vermelhas">
-                    <summary class="details__summary">Algumas células mudaram de cor de fundo para vermelho</summary>
+                    <summary class="details__summary">Algumas células ficaram vermelhas</summary>
                     <p>As células das secções <b>Controlo da Ficha de Stock e Controlo de Inventário</b> têm um tamanho para conter visivelmente 12 algarismos no máximo, isto é, mostram valores até <span class="number-format">999999999999</span> e as células das colunas <b>Quantidade Pedida e Qtd. Autorizada pelo Responsável Clínico</b> podem mostrar números com até 16 algarismos. Quando uma célula recebe um número com mais de 12 ou 16 algarismos, dá um alerta ficando vermelha e abrindo esta mensagem de texto para alertá-lo sobre a omissão dos algarismos e o real motivo.</p>
                     <p class="artigo__p--destaque">Para um país como Moçambique, onde o número de habitantes é de pouco mais de 30 milhões (<a href="https://energypedia.info/wiki/Moçambique:_Informação_sobre_o_País" target="_blank">dados demográficos de 2019</a>), podemos presumir que nenhuma Unidade Sanitária actualmente tem um número mensal de dados de algum indicador, de qualquer que seja a sua natureza, acima de <span class="number-format">999999999999</span>.</p>
                 </details>
@@ -7542,7 +7542,7 @@
                 <nav class=footer__nav>
                     <h4 class="footer__nav__title">Hiperligações para outros serviços afins</h4>
                     <ul>
-                        <li><a href=https://quinamine.github.io/totalizador-de-resumo-mensal-de-tuberculose/index.html target=_blank class="footer__nav__link">Totalizador de Resumo Mensal de Tuberculose</a></li>
+                        <li><a href=https://quinamine.github.io/totalizador-de-resumo-mensal-de-notificacao-de-tb-e-tb-hiv/index.html target=_blank class="footer__nav__link">Totalizador de Resumo Mensal de Notificação de TB e TB/HIV</a></li>
 						<li><a href=https://quinamine.github.io/totalizador-de-mapa-resumo-mensal-de-caixa/index.html target=_blank class="footer__nav__link">Totalizador de Mapa Resumo Mensal de Caixa</a></li>
                         <li><a href=https://quinamine.github.io/totalizador-de-resumo-trimestral-de-apss-e-pp/index.html target=_blank class="footer__nav__link">Totalizador de Resumo Trimestral de APSS/PP</a></li>
                         <li><a href=https://quinamine.github.io/totalizador-de-resumo-mensal-de-consultas/index.html target=_blank class="footer__nav__link">Totalizador de Resumo Mensal de Consultas</a></li>
