--- a/index.html
+++ b/index.html
@@ -790,8 +790,7 @@
                             <input type="number" min="0" />
                             <!-- Quantidade autorizada -->
                             <input type="number" min="0" />
-                        </div>  
-      
+                        </div>     
                         <!-- Pagina 2 -->
                         <div class="ficha__linha-de-inputs ficha__linha-de-inputs--1a-da-pagina">
                             <input type="text" placeholder="FNM" value="2-I-2" />
@@ -1441,7 +1440,6 @@
                             <!-- Quantidade autorizada -->
                             <input type="number" min="0" />
                         </div>
-
                         <!-- Pagina 3 -->
                         <div class="ficha__linha-de-inputs ficha__linha-de-inputs--1a-da-pagina">
                             <input type="text" placeholder="FNM" value="5-A-2" />
@@ -2091,8 +2089,7 @@
                             <!-- Quantidade autorizada -->
                             <input type="number" min="0" />
                         </div>
-
-                         <!-- Pagina 4 -->
+                        <!-- Pagina 4 -->
                         <div class="ficha__linha-de-inputs ficha__linha-de-inputs--1a-da-pagina">
                             <input type="text" placeholder="FNM" value="7-B-9" />
                             <input type="text" placeholder="Adicionar medicamento/artigo médico" value="Tramadol 50 mg Cáps."/>
@@ -2741,7 +2738,6 @@
                             <!-- Quantidade autorizada -->
                             <input type="number" min="0" />
                         </div>
-
                         <!-- Pagina 5 -->
                         <div class="ficha__linha-de-inputs ficha__linha-de-inputs--1a-da-pagina">
                             <input type="text" placeholder="FNM" value="7-J-6" />
@@ -3391,7 +3387,6 @@
                             <!-- Quantidade autorizada -->
                             <input type="number" min="0" />
                         </div>
-
                         <!-- Pagina 6 -->
                         <div class="ficha__linha-de-inputs ficha__linha-de-inputs--1a-da-pagina">
                             <input type="text" placeholder="FNM" value="8-F-8" />
@@ -4041,7 +4036,6 @@
                             <!-- Quantidade autorizada -->
                             <input type="number" min="0" />
                         </div>
-
                         <!-- Pagina 7 -->
                         <div class="ficha__linha-de-inputs ficha__linha-de-inputs--1a-da-pagina">
                             <input type="text" placeholder="FNM" value="8-O-5" />
@@ -4691,7 +4685,6 @@
                             <!-- Quantidade autorizada -->
                             <input type="number" min="0" />
                         </div>
-
                         <!-- Pagina 8 -->
                         <div class="ficha__linha-de-inputs ficha__linha-de-inputs--1a-da-pagina">
                             <input type="text" placeholder="FNM" value="12-B-6" />
@@ -5198,6 +5191,30 @@
                             <input type="number" min="0" />
                         </div>
                         <div class="ficha__linha-de-inputs">
+                            <input type="text" placeholder="FNM" value="14-A-3" />
+                            <input type="text" placeholder="Adicionar medicamento/artigo médico" value="Ibuprofeno 400 mg Comp."/>
+                            <!-- Stock no Início do Período -->
+                            <input type="number" min="0" data-stfp="l205dot5-c1c2-menos-l205dot5-c3" data-stfpoutput="l205dot5-c4" data-diferenca="l205dot5-c6-menos-l205dot5-c4" data-diferencaoutput="l205dot5-c7" />
+                            <!-- Soma das Entradas -->
+                            <input type="number" min="0" data-stfp="l205dot5-c1c2-menos-l205dot5-c3" data-stfpoutput="l205dot5-c4" data-diferenca="l205dot5-c6-menos-l205dot5-c4" data-diferencaoutput="l205dot5-c7" />
+                            <!-- Soma das Saídas -->
+                            <input type="number" min="0" class="l205dot5-c3" data-stfp="l205dot5-c1c2-menos-l205dot5-c3" data-stfpoutput="l205dot5-c4" data-diferenca="l205dot5-c6-menos-l205dot5-c4" data-diferencaoutput="l205dot5-c7" data-qtdarequisitar="l205dot5-c3-menos-l205dot5-c6" data-qtdarequisitaroutput="l205dot5-c8" />
+                            <!-- Stock Teórico Fim do Período -->
+                            <input type="number" min="0" readonly class="l205dot5-c4" />
+                            <!-- Total dos Pedidos -->
+                            <input type="number" min="0" class="celula-total-dos-pedidos" /> 
+                            <!-- Inventário do Stock -->
+                            <input type="number" min="0" class="l205dot5-c6"  data-diferenca="l205dot5-c6-menos-l205dot5-c4" data-diferencaoutput="l205dot5-c7" data-qtdarequisitar="l205dot5-c3-menos-l205dot5-c6" data-qtdarequisitaroutput="l205dot5-c8" />
+                            <!-- Diferença -->
+                            <input type="number" min="0" readonly class="l205dot5-c7"/>
+                            <!-- Quantidade a requisitar -->
+                            <input type="number" min="0" readonly class="l205dot5-c8" />
+                            <!-- Quantidade pedida -->
+                            <input type="number" min="0" />
+                            <!-- Quantidade autorizada -->
+                            <input type="number" min="0" />
+                        </div>
+                        <div class="ficha__linha-de-inputs">
                             <input type="text" placeholder="FNM" value="14-A-4" />
                             <input type="text" placeholder="Adicionar medicamento/artigo médico" value="Ibuprofeno 100 mg/5 ml Susp."/>
                             <!-- Stock no Início do Período -->
@@ -5317,7 +5334,8 @@
                             <!-- Quantidade autorizada -->
                             <input type="number" min="0" />
                         </div>
-                        <div class="ficha__linha-de-inputs">
+                        <!-- Pagina 9 -->
+                        <div class="ficha__linha-de-inputs ficha__linha-de-inputs--1a-da-pagina">
                             <input type="text" placeholder="FNM" value="15-B-1" />
                             <input type="text" placeholder="Adicionar medicamento/artigo médico" value="Betametasona 30 g Creme cutâneo a 0,1%"/>
                             <!-- Stock no Início do Período -->
@@ -5341,9 +5359,7 @@
                             <!-- Quantidade autorizada -->
                             <input type="number" min="0" />
                         </div>
-
-                        <!-- Pagina 9 -->
-                        <div class="ficha__linha-de-inputs ficha__linha-de-inputs--1a-da-pagina">
+                        <div class="ficha__linha-de-inputs">
                             <input type="text" placeholder="FNM" value="15-B-11" />
                             <input type="text" placeholder="Adicionar medicamento/artigo médico" value="Hidrocortisona 30 g Creme cutâneo a 1%"/>
                             <!-- Stock no Início do Período -->
@@ -5967,7 +5983,8 @@
                             <!-- Quantidade autorizada -->
                             <input type="number" min="0" />
                         </div>
-                        <div class="ficha__linha-de-inputs">
+                        <!-- Pagina 10 -->
+                        <div class="ficha__linha-de-inputs ficha__linha-de-inputs--1a-da-pagina">
                             <input type="text" placeholder="FNM" value="19-B-6" />
                             <input type="text" placeholder="Adicionar medicamento/artigo médico" value="Vacina Anti-Rábica 1 ml Inj."/>
                             <!-- Stock no Início do Período -->
@@ -5991,9 +6008,7 @@
                             <!-- Quantidade autorizada -->
                             <input type="number" min="0" />
                         </div>
-
-                        <!-- Pagina 10 -->
-                        <div class="ficha__linha-de-inputs ficha__linha-de-inputs--1a-da-pagina">
+                        <div class="ficha__linha-de-inputs">
                             <input type="text" placeholder="FNM" value="20-A-1" />
                             <input type="text" placeholder="Adicionar medicamento/artigo médico" value="Água Oxigenada a 10 volumes Sol. a 3% - Fr. 500 ml"/>
                             <!-- Stock no Início do Período -->
@@ -6616,8 +6631,9 @@
                             <input type="number" min="0" />
                             <!-- Quantidade autorizada -->
                             <input type="number" min="0" />
-                        </div>   
-                        <div class="ficha__linha-de-inputs">
+                        </div>  
+                        <!-- Página 11 -->   
+                        <div class="ficha__linha-de-inputs ficha__linha-de-inputs--1a-da-pagina">
                             <input type="text" placeholder="FNM" value="&minus;" />
                             <input type="text" placeholder="Adicionar medicamento/artigo médico" value="Luvas Ginecológicas Tamanho 8.5"/>
                             <!-- Stock no Início do Período -->
@@ -6640,10 +6656,8 @@
                             <input type="number" min="0" />
                             <!-- Quantidade autorizada -->
                             <input type="number" min="0" />
-                        </div>  
-                        
-                        <!-- Página 11 -->
-                        <div class="ficha__linha-de-inputs ficha__linha-de-inputs--1a-da-pagina">
+                        </div>
+                        <div class="ficha__linha-de-inputs">
                             <input type="text" placeholder="FNM" value="&minus;" />
                             <input type="text" placeholder="Adicionar medicamento/artigo médico" value="Luvas de Procedimento Tamanho S (Pequeno)"/>
                             <!-- Stock no Início do Período -->
@@ -7266,31 +7280,7 @@
                             <input type="number" min="0" />
                             <!-- Quantidade autorizada -->
                             <input type="number" min="0" />
-                        </div>  
-                        <div class="ficha__linha-de-inputs">
-                            <input type="text" placeholder="FNM" />
-                            <input type="text" placeholder="Adicionar medicamento/artigo médico"/>
-                            <!-- Stock no Início do Período -->
-                            <input type="number" min="0" data-stfp="l291-c1c2-menos-l291-c3" data-stfpoutput="l291-c4" data-diferenca="l291-c6-menos-l291-c4" data-diferencaoutput="l291-c7" />
-                            <!-- Soma das Entradas -->
-                            <input type="number" min="0" data-stfp="l291-c1c2-menos-l291-c3" data-stfpoutput="l291-c4" data-diferenca="l291-c6-menos-l291-c4" data-diferencaoutput="l291-c7" />
-                            <!-- Soma das Saídas -->
-                            <input type="number" min="0" class="l291-c3" data-stfp="l291-c1c2-menos-l291-c3" data-stfpoutput="l291-c4" data-diferenca="l291-c6-menos-l291-c4" data-diferencaoutput="l291-c7" data-qtdarequisitar="l291-c3-menos-l291-c6" data-qtdarequisitaroutput="l291-c8" />
-                            <!-- Stock Teórico Fim do Período -->
-                            <input type="number" min="0" readonly class="l291-c4" />
-                            <!-- Total dos Pedidos -->
-                            <input type="number" min="0" class="celula-total-dos-pedidos" /> 
-                            <!-- Inventário do Stock -->
-                            <input type="number" min="0" class="l291-c6"  data-diferenca="l291-c6-menos-l291-c4" data-diferencaoutput="l291-c7" data-qtdarequisitar="l291-c3-menos-l291-c6" data-qtdarequisitaroutput="l291-c8" />
-                            <!-- Diferença -->
-                            <input type="number" min="0" readonly class="l291-c7"/>
-                            <!-- Quantidade a requisitar -->
-                            <input type="number" min="0" readonly class="l291-c8" />
-                            <!-- Quantidade pedida -->
-                            <input type="number" min="0" />
-                            <!-- Quantidade autorizada -->
-                            <input type="number" min="0" />
-                        </div>  
+                        </div> 
                         <p class="msg-nothing-found-to-filtrar-medicamentos --display-none"></p>
                     </div>
                 </div>
