--- a/index.html
+++ b/index.html
@@ -7326,7 +7326,7 @@
                     Este serviço é destinado às unidades sanitárias que precisam manter um stock de medicamentos para um intervalo mínimo de <b>2 meses</b>, a fim de garantir a contínua execução normal das suas actividades mesmo se, por algum motivo, não houver fornecimento de medicamentos do seu depósito fornecedor durante esse intervalo de tempo. Por isso, a fórmula utilizada pelo serviço para o cálculo da <b>Quantidade a Requisitar</b> é: <br/> <strong>Soma das saídas &times; 2 &minus; Inventário do stock</strong>. Em que <b>2</b> é referente aos <b>2 meses de manutenção de stock mínimo</b>.
                 </p>
                 <div class="dialog-box-default__btn-container">
-                    <button class="dialog-box-default__btn dialog-box-default__btn--aqd">Entendi</button>
+                    <button class="dialog-box-default__btn dialog-box-default__btn--aqd">Fechar</button>
                 </div>
             </div>
             <div class="dialog-box-default dialog-box-default--small">
@@ -7449,12 +7449,12 @@
                 </ul>
                 <h3 class="artigo__titulo artigo__titulo--nivel-2 ">O que eu preciso dispor para, e como utilizar o totalizador?</h3>
                 <ul class="artigo__lista artigo__lista--ul">
-                    <li>Um celular ou computador com acesso à internet.</li>
+                    <li>Um celular ou computador com acesso à internet;</li>
                     <li>Ficha(s) de Stock de cada fármaco/artigo médico com os movimentos do mês em alusão.</li>
                     <li>E por fim, preencher os movimentos de cada fármaco/artigo médico nas células correspondentes (Stock no Início do Período, Soma das Entradas, Soma das Saídas, Inventário do Stock) e consequentemente os totais (Stock Teórico Fim do Período, Diferença entre stock teórico e stock físico e Quantidade a Requisitar) são, em tempo real, correcta e automaticamente calculados.</li>
                 </ul>
                 <h3 class="artigo__titulo artigo__titulo--nivel-2">Qual é o destino dos dados que eu insiro?</h3>
-                <p>São guardados no seu celular ou computador, por meio de um recurso chamado <a href="https://developer.mozilla.org/pt-BR/docs/Web/API/Web_Storage_API" target="_blank">Web Storage</a> e você tem total controle sobre os dados, podendo mantê-los ou apagá-los por meio da opção "<b>Esvaziar ficha</b>" no menu do totalizador ou excluindo os dados de navegação (histórico) do navegador.</p>
+                <p>São guardados no seu celular ou computador, por meio de um recurso chamado <a href="https://developer.mozilla.org/pt-BR/docs/Web/API/Web_Storage_API" target="_blank">Web Storage</a> e você tem total controle sobre os dados, podendo mantê-los ou apagá-los por meio da opção "<b>Esvaziar ficha</b>" no menu do totalizador ou excluindo os dados de navegação do seu navegador.</p>
                 <h3 class="artigo__titulo artigo__titulo--nivel-2">Vantagens do totalizador</h3>
                 <ul class="artigo__lista artigo__lista--ul">
                     <li>Calcula e preenche automaticamente o Stock Teórico Fim do Período, Diferença entre stock teórico e stock físico e Quantidade a Requisitar;</li>
@@ -7526,7 +7526,7 @@
                 </details>
                 <details class="artigo__details artigo__details--border-b artigo__details--motivo-de-celulas-vermelhas">
                     <summary class="details__summary">Algumas células ficaram vermelhas</summary>
-                    <p>As células das secções <b>Controlo da Ficha de Stock e Controlo de Inventário</b> têm um tamanho para conter visivelmente 12 algarismos no máximo, isto é, mostram valores até <span class="number-format">999999999999</span> e as células das colunas <b>Quantidade Pedida e Qtd. Autorizada pelo Responsável Clínico</b> podem mostrar números com até 16 algarismos. Quando uma célula recebe um número com mais de 12 ou 16 algarismos, dá um alerta ficando vermelha e abrindo esta mensagem de texto para alertá-lo sobre a omissão dos algarismos e o real motivo.</p>
+                    <p>As células das secções <b>Controlo da Ficha de Stock e Controlo de Inventário</b> têm um tamanho para conter visivelmente 12 algarismos no máximo, isto é, mostram valores até <span class="number-format">999999999999</span> e as células das colunas <b>Quantidade Pedida e Qtd. Autorizada pelo Responsável Clínico</b> podem mostrar números com até 16 algarismos. Quando uma célula recebe um valor com mais de 12 ou 16 algarismos, dá um alerta ficando vermelha e abrindo esta mensagem de texto para alertá-lo sobre a omissão dos algarismos e o real motivo.</p>
                     <p class="artigo__p--destaque">Para um país como Moçambique, onde o número de habitantes é de pouco mais de 30 milhões (<a href="https://energypedia.info/wiki/Moçambique:_Informação_sobre_o_País" target="_blank">dados demográficos de 2019</a>), podemos presumir que nenhuma Unidade Sanitária actualmente tem um número mensal de dados de algum indicador, de qualquer que seja a sua natureza, acima de <span class="number-format">999999999999</span>.</p>
                 </details>
                 <p class="artigo-ajuda__p--contactar-suporte">Se os tópicos acima não cobrem a sua dúvida. Pode ainda solicitar suporte por <a href="mailto:quinamine.aderitofelix@gmail.com?subject=Requisição%2FBalancete">Email</a> ou <a href="https://wa.me/258846709901/?text=Olá%2C+Quinamine!+Sobre+o+*Requisição%2FBalancete*%2C+tenho+a+seguinte+dúvida%3A%20">WhatsApp</a>.</p>
@@ -7538,6 +7538,7 @@
                 <nav class=footer__nav>
                     <h4 class="footer__nav__title">Hiperligações para outros serviços afins</h4>
                     <ul>
+                        <li><a href=https://quinamine.github.io/ficha-de-resumo-mensal-de-exames-laboratoriais-de-tb/index.html class="footer__nav__link">Ficha de Resumo Mensal de Exames Laboratoriais de TB</a></li>
                         <li><a href=https://quinamine.github.io/totalizador-de-mapa-resumo-mensal-de-caixa/index.html class="footer__nav__link">Totalizador de Mapa Resumo Mensal de Caixa</a></li>
                         <li><a href=https://quinamine.github.io/totalizador-de-resumo-mensal-de-ats/index.html class="footer__nav__link">Totalizador de Resumo Mensal de ATS</a></li>
                         <li><a href=https://quinamine.github.io/totalizador-de-resumo-mensal-de-ccd/index.html class="footer__nav__link">Totalizador de Resumo Mensal de CCD</a></li>
