HTML: Actualizei o artigo Ajuda. JS: Actualizei o método 'destacarCelulasComConteudoOmisso' e Removi a função que formatava números do conteúdo de Suporte/Ajuda 'Algumas células ficaram vermelhas'.

--- a/index.html
+++ b/index.html
@@ -115,9 +115,9 @@
                             </label>
                             <input type="text" id="input-nivel-do-dc" list="datalist-categorias" class="input-nao-celular --fw-700" />
                             <datalist id="datalist-categorias">
-                                <option>Médico</option>
+                                <option>Médico Generalista</option>
+                                <option>Psicólogo Clínico</option>
                                 <option>TMG</option>
-                                <option>AMG</option>
                             </datalist>
                         </div>
                     </div>
@@ -7533,9 +7533,9 @@
                 </details>
                 <details class="artigo__details artigo__details--border-b artigo__details--motivo-de-celulas-vermelhas">
                     <summary class="details__summary">Algumas células ficaram vermelhas</summary>
-                    <p>Quando uma célula recebe um valor com um número de algarismos que excede o seu tamanho, dá um alerta ficando vermelha e abrindo esta mensagem de texto para alertá-lo sobre a omissão dos últimos algarismos.</p>
+                    <p>Uma célula adopta um fundo vermelho como sinal de alerta para indicar que o valor contido nela, excedeu a largura fixa da célula e, por isso, os últimos algarismos estão omissos, ou seja, estão fora da área visível da célula.</p>
                 </details>
-                <p class="artigo-ajuda__p--contactar-suporte">Se os tópicos acima não cobrem a sua dúvida. Pode ainda solicitar suporte por <a href="mailto:quinamine.aderitofelix@gmail.com?subject=Requisição%2FBalancete">Email</a> ou <a href="https://wa.me/258846709901/?text=Olá%2C+Quinamine!+Sobre+o+*Requisição%2FBalancete*%2C+tenho+a+seguinte+dúvida%3A%20">WhatsApp</a>.</p>
+                <p class="artigo-ajuda__p--contactar-suporte">Se os tópicos acima não cobrem as suas dúvidas, pode ainda solicitar suporte ao Desenvolvedor pelos seguintes endereços: <a href="mailto:quinamine.aderitofelix@gmail.com?subject=Requisição%2FBalancete">Email</a> e/ou <a href="https://wa.me/258846709901/?text=Olá%2C+Quinamine!+Sobre+o+*Requisição%2FBalancete*%2C+tenho+a+seguinte+dúvida%3A%20">WhatsApp</a>.</p>
                 <button class="artigo__btn-x artigo__btn-x--fechar-ajuda" title="Fechar">&times;</button>
             </article>
         </section>
